fix strange white space

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+}
+
 .col-centered{
   float: none;
   margin: 0 auto;
